kubernetes-network/web-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: web
spec:
 replicas: 3
 strategy:
  type: RollingUpdate
  rollingUpdate:
   maxSurge: 100%
   maxUnavailable: 0
 selector:
  matchLabels:
    app: web
 template:
   metadata:
    name: web-deployment
    labels:
     app: web
   spec:
    containers:
    - name: web
      image: garamer/k8s:nginx_v1
      livenessProbe:
        tcpSocket:
          port: 8000
      readinessProbe:
       httpGet:
        path: /index.html
        port: 8000
      volumeMounts:
        - name: app
          mountPath: /app
    volumes:
     - name: app
       emptyDir: {}
